// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render 1`] = `
<body>
  <div>
    <script
      nonce=""
    >
      ((e, s, n, l, o, d, u, h)=&gt;{
    let m = document.documentElement, w = [
        "light",
        "dark"
    ];
    function p(r) {
        (Array.isArray(e) ? e : [
            e
        ]).forEach((y)=&gt;{
            let k = y === "class", S = k && d ? o.map((f)=&gt;d[f] || f) : o;
            k ? (m.classList.remove(...S), m.classList.add(d && d[r] ? d[r] : r)) : m.setAttribute(y, r);
        }), C(r);
    }
    function C(r) {
        h && w.includes(r) && (m.style.colorScheme = r);
    }
    function a() {
        return window.matchMedia("(prefers-color-scheme: dark)").matches ? "dark" : "light";
    }
    if (l) p(l);
    else try {
        let r = localStorage.getItem(s) || n, y = u && r === "system" ? a() : r;
        p(y);
    } catch (r) {}
})("class","theme","system",null,["light","dark"],null,true,true)
    </script>
    <section
      aria-atomic="false"
      aria-label="Notifications alt+T"
      aria-live="polite"
      aria-relevant="additions text"
      tabindex="-1"
    />
    <button
      class="group w-fit inline-flex items-center justify-center whitespace-nowrap rounded-md transition-all duration-300 disabled:pointer-events-none bg-primary-normal dark:bg-dark-primary-normal !text-normal dark:!text-dark-normal disabled:bg-background-disabled dark:disabled:bg-dark-background-disabled disabled:text-label-disabled dark:disabled:text-dark-label-disabled h-10 px-4 text-14/button gap-1.5 relative overflow-hidden"
      type="button"
    >
      <div
        class="absolute inset-0 bg-gray-950 opacity-0 transition-opacity duration-300 group-hover:opacity-[0.06] group-active:opacity-[0.12]"
      />
      <span
        class="relative z-10"
      >
        Button
      </span>
    </button>
  </div>
</body>
`;

exports[`Button should render 2`] = `
<body>
  <div>
    <script
      nonce=""
    >
      ((e, s, n, l, o, d, u, h)=&gt;{
    let m = document.documentElement, w = [
        "light",
        "dark"
    ];
    function p(r) {
        (Array.isArray(e) ? e : [
            e
        ]).forEach((y)=&gt;{
            let k = y === "class", S = k && d ? o.map((f)=&gt;d[f] || f) : o;
            k ? (m.classList.remove(...S), m.classList.add(d && d[r] ? d[r] : r)) : m.setAttribute(y, r);
        }), C(r);
    }
    function C(r) {
        h && w.includes(r) && (m.style.colorScheme = r);
    }
    function a() {
        return window.matchMedia("(prefers-color-scheme: dark)").matches ? "dark" : "light";
    }
    if (l) p(l);
    else try {
        let r = localStorage.getItem(s) || n, y = u && r === "system" ? a() : r;
        p(y);
    } catch (r) {}
})("class","theme","system",null,["light","dark"],null,true,true)
    </script>
    <section
      aria-atomic="false"
      aria-label="Notifications alt+T"
      aria-live="polite"
      aria-relevant="additions text"
      tabindex="-1"
    />
    <div
      class="flex flex-row gap-8"
    >
      <div
        class="flex flex-col gap-4"
      >
        <p
          class="text-14/body text-gray-600"
        >
          No Icon
        </p>
        <div
          class="flex flex-col gap-4"
        >
          <button
            class="group w-fit inline-flex items-center justify-center whitespace-nowrap rounded-md transition-all duration-300 disabled:pointer-events-none bg-primary-normal dark:bg-dark-primary-normal !text-normal dark:!text-dark-normal disabled:bg-background-disabled dark:disabled:bg-dark-background-disabled disabled:text-label-disabled dark:disabled:text-dark-label-disabled h-10 px-4 text-14/button gap-1.5 relative overflow-hidden"
            type="button"
          >
            <div
              class="absolute inset-0 bg-gray-950 opacity-0 transition-opacity duration-300 group-hover:opacity-[0.06] group-active:opacity-[0.12]"
            />
            <span
              class="relative z-10"
            >
              Button
            </span>
          </button>
          <button
            class="group w-fit inline-flex items-center justify-center whitespace-nowrap rounded-md transition-all duration-300 disabled:pointer-events-none bg-primary-normal dark:bg-dark-primary-normal !text-normal dark:!text-dark-normal disabled:bg-background-disabled dark:disabled:bg-dark-background-disabled disabled:text-label-disabled dark:disabled:text-dark-label-disabled h-10 px-4 text-14/button gap-1.5 relative overflow-hidden"
            disabled=""
            type="button"
          >
            <div
              class="absolute inset-0 bg-gray-950 opacity-0 transition-opacity duration-300 group-hover:opacity-[0.06] group-active:opacity-[0.12]"
            />
            <span
              class="relative z-10"
            >
              Button
            </span>
          </button>
        </div>
      </div>
      <div
        class="flex flex-col gap-4"
      >
        <p
          class="text-14/body text-gray-600"
        >
          Left Icon
        </p>
        <div
          class="flex flex-col gap-4"
        >
          <button
            class="group w-fit inline-flex items-center justify-center whitespace-nowrap rounded-md transition-all duration-300 disabled:pointer-events-none bg-primary-normal dark:bg-dark-primary-normal !text-normal dark:!text-dark-normal disabled:bg-background-disabled dark:disabled:bg-dark-background-disabled disabled:text-label-disabled dark:disabled:text-dark-label-disabled h-10 px-4 text-14/button gap-1.5 relative overflow-hidden"
            type="button"
          >
            <div
              class="absolute inset-0 bg-gray-950 opacity-0 transition-opacity duration-300 group-hover:opacity-[0.06] group-active:opacity-[0.12]"
            />
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-left text-label-normal group-disabled:text-label-disabled dark:text-dark-label-normal dark:group-disabled:text-dark-label-disabled text-normal"
              component="[object Object]"
              fill="none"
              height="20"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m15 18-6-6 6-6"
              />
            </svg>
            <span
              class="relative z-10"
            >
              Button
            </span>
          </button>
          <button
            class="group w-fit inline-flex items-center justify-center whitespace-nowrap rounded-md transition-all duration-300 disabled:pointer-events-none bg-primary-normal dark:bg-dark-primary-normal !text-normal dark:!text-dark-normal disabled:bg-background-disabled dark:disabled:bg-dark-background-disabled disabled:text-label-disabled dark:disabled:text-dark-label-disabled h-10 px-4 text-14/button gap-1.5 relative overflow-hidden"
            disabled=""
            type="button"
          >
            <div
              class="absolute inset-0 bg-gray-950 opacity-0 transition-opacity duration-300 group-hover:opacity-[0.06] group-active:opacity-[0.12]"
            />
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-left text-label-normal group-disabled:text-label-disabled dark:text-dark-label-normal dark:group-disabled:text-dark-label-disabled text-normal"
              component="[object Object]"
              fill="none"
              height="20"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m15 18-6-6 6-6"
              />
            </svg>
            <span
              class="relative z-10"
            >
              Button
            </span>
          </button>
        </div>
      </div>
      <div
        class="flex flex-col gap-4"
      >
        <p
          class="text-14/body text-gray-600"
        >
          Right Icon
        </p>
        <div
          class="flex flex-col gap-4"
        >
          <button
            class="group w-fit inline-flex items-center justify-center whitespace-nowrap rounded-md transition-all duration-300 disabled:pointer-events-none bg-primary-normal dark:bg-dark-primary-normal !text-normal dark:!text-dark-normal disabled:bg-background-disabled dark:disabled:bg-dark-background-disabled disabled:text-label-disabled dark:disabled:text-dark-label-disabled h-10 px-4 text-14/button gap-1.5 relative overflow-hidden"
            type="button"
          >
            <div
              class="absolute inset-0 bg-gray-950 opacity-0 transition-opacity duration-300 group-hover:opacity-[0.06] group-active:opacity-[0.12]"
            />
            <span
              class="relative z-10"
            >
              Button
            </span>
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-right text-label-normal group-disabled:text-label-disabled dark:text-dark-label-normal dark:group-disabled:text-dark-label-disabled text-normal"
              component="[object Object]"
              fill="none"
              height="20"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m9 18 6-6-6-6"
              />
            </svg>
          </button>
          <button
            class="group w-fit inline-flex items-center justify-center whitespace-nowrap rounded-md transition-all duration-300 disabled:pointer-events-none bg-primary-normal dark:bg-dark-primary-normal !text-normal dark:!text-dark-normal disabled:bg-background-disabled dark:disabled:bg-dark-background-disabled disabled:text-label-disabled dark:disabled:text-dark-label-disabled h-10 px-4 text-14/button gap-1.5 relative overflow-hidden"
            disabled=""
            type="button"
          >
            <div
              class="absolute inset-0 bg-gray-950 opacity-0 transition-opacity duration-300 group-hover:opacity-[0.06] group-active:opacity-[0.12]"
            />
            <span
              class="relative z-10"
            >
              Button
            </span>
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-right text-label-normal group-disabled:text-label-disabled dark:text-dark-label-normal dark:group-disabled:text-dark-label-disabled text-normal"
              component="[object Object]"
              fill="none"
              height="20"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m9 18 6-6-6-6"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Button should render 3`] = `
<body>
  <div>
    <script
      nonce=""
    >
      ((e, s, n, l, o, d, u, h)=&gt;{
    let m = document.documentElement, w = [
        "light",
        "dark"
    ];
    function p(r) {
        (Array.isArray(e) ? e : [
            e
        ]).forEach((y)=&gt;{
            let k = y === "class", S = k && d ? o.map((f)=&gt;d[f] || f) : o;
            k ? (m.classList.remove(...S), m.classList.add(d && d[r] ? d[r] : r)) : m.setAttribute(y, r);
        }), C(r);
    }
    function C(r) {
        h && w.includes(r) && (m.style.colorScheme = r);
    }
    function a() {
        return window.matchMedia("(prefers-color-scheme: dark)").matches ? "dark" : "light";
    }
    if (l) p(l);
    else try {
        let r = localStorage.getItem(s) || n, y = u && r === "system" ? a() : r;
        p(y);
    } catch (r) {}
})("class","theme","system",null,["light","dark"],null,true,true)
    </script>
    <section
      aria-atomic="false"
      aria-label="Notifications alt+T"
      aria-live="polite"
      aria-relevant="additions text"
      tabindex="-1"
    />
    <div
      class="flex flex-row gap-8"
    >
      <div
        class="flex flex-col gap-4"
      >
        <p
          class="text-14/body text-gray-600"
        >
          default
        </p>
        <div
          class="flex flex-col gap-4"
        >
          <button
            class="group w-fit inline-flex items-center justify-center whitespace-nowrap rounded-md transition-all duration-300 disabled:pointer-events-none bg-primary-normal dark:bg-dark-primary-normal !text-normal dark:!text-dark-normal disabled:bg-background-disabled dark:disabled:bg-dark-background-disabled disabled:text-label-disabled dark:disabled:text-dark-label-disabled h-10 px-4 text-14/button gap-1.5 relative overflow-hidden"
            type="button"
          >
            <div
              class="absolute inset-0 bg-gray-950 opacity-0 transition-opacity duration-300 group-hover:opacity-[0.06] group-active:opacity-[0.12]"
            />
            <span
              class="relative z-10"
            >
              Button
            </span>
          </button>
          <button
            class="group w-fit inline-flex items-center justify-center whitespace-nowrap rounded-md transition-all duration-300 disabled:pointer-events-none bg-primary-normal dark:bg-dark-primary-normal !text-normal dark:!text-dark-normal disabled:bg-background-disabled dark:disabled:bg-dark-background-disabled disabled:text-label-disabled dark:disabled:text-dark-label-disabled h-10 px-4 text-14/button gap-1.5 relative overflow-hidden"
            disabled=""
            type="button"
          >
            <div
              class="absolute inset-0 bg-gray-950 opacity-0 transition-opacity duration-300 group-hover:opacity-[0.06] group-active:opacity-[0.12]"
            />
            <span
              class="relative z-10"
            >
              Button
            </span>
          </button>
        </div>
      </div>
      <div
        class="flex flex-col gap-4"
      >
        <p
          class="text-14/body text-gray-600"
        >
          small
        </p>
        <div
          class="flex flex-col gap-4"
        >
          <button
            class="group w-fit inline-flex items-center justify-center whitespace-nowrap rounded-md transition-all duration-300 disabled:pointer-events-none bg-primary-normal dark:bg-dark-primary-normal !text-normal dark:!text-dark-normal disabled:bg-background-disabled dark:disabled:bg-dark-background-disabled disabled:text-label-disabled dark:disabled:text-dark-label-disabled h-8 px-3 text-14/button gap-1 relative overflow-hidden"
            type="button"
          >
            <div
              class="absolute inset-0 bg-gray-950 opacity-0 transition-opacity duration-300 group-hover:opacity-[0.06] group-active:opacity-[0.12]"
            />
            <span
              class="relative z-10"
            >
              Button
            </span>
          </button>
          <button
            class="group w-fit inline-flex items-center justify-center whitespace-nowrap rounded-md transition-all duration-300 disabled:pointer-events-none bg-primary-normal dark:bg-dark-primary-normal !text-normal dark:!text-dark-normal disabled:bg-background-disabled dark:disabled:bg-dark-background-disabled disabled:text-label-disabled dark:disabled:text-dark-label-disabled h-8 px-3 text-14/button gap-1 relative overflow-hidden"
            disabled=""
            type="button"
          >
            <div
              class="absolute inset-0 bg-gray-950 opacity-0 transition-opacity duration-300 group-hover:opacity-[0.06] group-active:opacity-[0.12]"
            />
            <span
              class="relative z-10"
            >
              Button
            </span>
          </button>
        </div>
      </div>
      <div
        class="flex flex-col gap-4"
      >
        <p
          class="text-14/body text-gray-600"
        >
          medium
        </p>
        <div
          class="flex flex-col gap-4"
        >
          <button
            class="group w-fit inline-flex items-center justify-center whitespace-nowrap rounded-md transition-all duration-300 disabled:pointer-events-none bg-primary-normal dark:bg-dark-primary-normal !text-normal dark:!text-dark-normal disabled:bg-background-disabled dark:disabled:bg-dark-background-disabled disabled:text-label-disabled dark:disabled:text-dark-label-disabled h-10 px-4 text-14/button gap-1.5 relative overflow-hidden"
            type="button"
          >
            <div
              class="absolute inset-0 bg-gray-950 opacity-0 transition-opacity duration-300 group-hover:opacity-[0.06] group-active:opacity-[0.12]"
            />
            <span
              class="relative z-10"
            >
              Button
            </span>
          </button>
          <button
            class="group w-fit inline-flex items-center justify-center whitespace-nowrap rounded-md transition-all duration-300 disabled:pointer-events-none bg-primary-normal dark:bg-dark-primary-normal !text-normal dark:!text-dark-normal disabled:bg-background-disabled dark:disabled:bg-dark-background-disabled disabled:text-label-disabled dark:disabled:text-dark-label-disabled h-10 px-4 text-14/button gap-1.5 relative overflow-hidden"
            disabled=""
            type="button"
          >
            <div
              class="absolute inset-0 bg-gray-950 opacity-0 transition-opacity duration-300 group-hover:opacity-[0.06] group-active:opacity-[0.12]"
            />
            <span
              class="relative z-10"
            >
              Button
            </span>
          </button>
        </div>
      </div>
      <div
        class="flex flex-col gap-4"
      >
        <p
          class="text-14/body text-gray-600"
        >
          large
        </p>
        <div
          class="flex flex-col gap-4"
        >
          <button
            class="group w-fit inline-flex items-center justify-center whitespace-nowrap rounded-md transition-all duration-300 disabled:pointer-events-none bg-primary-normal dark:bg-dark-primary-normal !text-normal dark:!text-dark-normal disabled:bg-background-disabled dark:disabled:bg-dark-background-disabled disabled:text-label-disabled dark:disabled:text-dark-label-disabled h-[52px] px-5 text-16/button gap-1.5 relative overflow-hidden"
            type="button"
          >
            <div
              class="absolute inset-0 bg-gray-950 opacity-0 transition-opacity duration-300 group-hover:opacity-[0.06] group-active:opacity-[0.12]"
            />
            <span
              class="relative z-10"
            >
              Button
            </span>
          </button>
          <button
            class="group w-fit inline-flex items-center justify-center whitespace-nowrap rounded-md transition-all duration-300 disabled:pointer-events-none bg-primary-normal dark:bg-dark-primary-normal !text-normal dark:!text-dark-normal disabled:bg-background-disabled dark:disabled:bg-dark-background-disabled disabled:text-label-disabled dark:disabled:text-dark-label-disabled h-[52px] px-5 text-16/button gap-1.5 relative overflow-hidden"
            disabled=""
            type="button"
          >
            <div
              class="absolute inset-0 bg-gray-950 opacity-0 transition-opacity duration-300 group-hover:opacity-[0.06] group-active:opacity-[0.12]"
            />
            <span
              class="relative z-10"
            >
              Button
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Button should render 4`] = `
<body>
  <div>
    <script
      nonce=""
    >
      ((e, s, n, l, o, d, u, h)=&gt;{
    let m = document.documentElement, w = [
        "light",
        "dark"
    ];
    function p(r) {
        (Array.isArray(e) ? e : [
            e
        ]).forEach((y)=&gt;{
            let k = y === "class", S = k && d ? o.map((f)=&gt;d[f] || f) : o;
            k ? (m.classList.remove(...S), m.classList.add(d && d[r] ? d[r] : r)) : m.setAttribute(y, r);
        }), C(r);
    }
    function C(r) {
        h && w.includes(r) && (m.style.colorScheme = r);
    }
    function a() {
        return window.matchMedia("(prefers-color-scheme: dark)").matches ? "dark" : "light";
    }
    if (l) p(l);
    else try {
        let r = localStorage.getItem(s) || n, y = u && r === "system" ? a() : r;
        p(y);
    } catch (r) {}
})("class","theme","system",null,["light","dark"],null,true,true)
    </script>
    <section
      aria-atomic="false"
      aria-label="Notifications alt+T"
      aria-live="polite"
      aria-relevant="additions text"
      tabindex="-1"
    />
    <div
      class="flex flex-row gap-8"
    >
      <div
        class="flex flex-col gap-4"
      >
        <p
          class="text-14/body text-gray-600"
        >
          default
        </p>
        <div
          class="flex flex-col gap-4"
        >
          <button
            class="group w-fit inline-flex items-center justify-center whitespace-nowrap rounded-md transition-all duration-300 disabled:pointer-events-none bg-primary-normal dark:bg-dark-primary-normal !text-normal dark:!text-dark-normal disabled:bg-background-disabled dark:disabled:bg-dark-background-disabled disabled:text-label-disabled dark:disabled:text-dark-label-disabled h-10 px-4 text-14/button gap-1.5 relative overflow-hidden"
            type="button"
          >
            <div
              class="absolute inset-0 bg-gray-950 opacity-0 transition-opacity duration-300 group-hover:opacity-[0.06] group-active:opacity-[0.12]"
            />
            <span
              class="relative z-10"
            >
              Button
            </span>
          </button>
          <button
            class="group w-fit inline-flex items-center justify-center whitespace-nowrap rounded-md transition-all duration-300 disabled:pointer-events-none bg-primary-normal dark:bg-dark-primary-normal !text-normal dark:!text-dark-normal disabled:bg-background-disabled dark:disabled:bg-dark-background-disabled disabled:text-label-disabled dark:disabled:text-dark-label-disabled h-10 px-4 text-14/button gap-1.5 relative overflow-hidden"
            disabled=""
            type="button"
          >
            <div
              class="absolute inset-0 bg-gray-950 opacity-0 transition-opacity duration-300 group-hover:opacity-[0.06] group-active:opacity-[0.12]"
            />
            <span
              class="relative z-10"
            >
              Button
            </span>
          </button>
        </div>
      </div>
      <div
        class="flex flex-col gap-4"
      >
        <p
          class="text-14/body text-gray-600"
        >
          solid
        </p>
        <div
          class="flex flex-col gap-4"
        >
          <button
            class="group w-fit inline-flex items-center justify-center whitespace-nowrap rounded-md transition-all duration-300 disabled:pointer-events-none bg-primary-normal dark:bg-dark-primary-normal !text-normal dark:!text-dark-normal disabled:bg-background-disabled dark:disabled:bg-dark-background-disabled disabled:text-label-disabled dark:disabled:text-dark-label-disabled h-10 px-4 text-14/button gap-1.5 relative overflow-hidden"
            type="button"
          >
            <div
              class="absolute inset-0 bg-gray-950 opacity-0 transition-opacity duration-300 group-hover:opacity-[0.06] group-active:opacity-[0.12]"
            />
            <span
              class="relative z-10"
            >
              Button
            </span>
          </button>
          <button
            class="group w-fit inline-flex items-center justify-center whitespace-nowrap rounded-md transition-all duration-300 disabled:pointer-events-none bg-primary-normal dark:bg-dark-primary-normal !text-normal dark:!text-dark-normal disabled:bg-background-disabled dark:disabled:bg-dark-background-disabled disabled:text-label-disabled dark:disabled:text-dark-label-disabled h-10 px-4 text-14/button gap-1.5 relative overflow-hidden"
            disabled=""
            type="button"
          >
            <div
              class="absolute inset-0 bg-gray-950 opacity-0 transition-opacity duration-300 group-hover:opacity-[0.06] group-active:opacity-[0.12]"
            />
            <span
              class="relative z-10"
            >
              Button
            </span>
          </button>
        </div>
      </div>
      <div
        class="flex flex-col gap-4"
      >
        <p
          class="text-14/body text-gray-600"
        >
          outlinedPrimary
        </p>
        <div
          class="flex flex-col gap-4"
        >
          <button
            class="group w-fit inline-flex items-center justify-center whitespace-nowrap rounded-md transition-all duration-300 disabled:pointer-events-none bg-transparent border border-primary-normal dark:border-dark-primary-normal !text-primary-normal dark:!text-dark-primary-normal disabled:border-line-normal dark:disabled:border-dark-line-normal disabled:!text-label-disabled dark:disabled:!text-dark-label-disabled h-10 px-4 text-14/button gap-1.5 relative overflow-hidden"
            type="button"
          >
            <div
              class="absolute inset-0 bg-gray-950 opacity-0 transition-opacity duration-300 group-hover:opacity-[0.06] group-active:opacity-[0.12] !bg-primary-normal dark:!bg-dark-primary-normal"
            />
            <span
              class="relative z-10"
            >
              Button
            </span>
          </button>
          <button
            class="group w-fit inline-flex items-center justify-center whitespace-nowrap rounded-md transition-all duration-300 disabled:pointer-events-none bg-transparent border border-primary-normal dark:border-dark-primary-normal !text-primary-normal dark:!text-dark-primary-normal disabled:border-line-normal dark:disabled:border-dark-line-normal disabled:!text-label-disabled dark:disabled:!text-dark-label-disabled h-10 px-4 text-14/button gap-1.5 relative overflow-hidden"
            disabled=""
            type="button"
          >
            <div
              class="absolute inset-0 bg-gray-950 opacity-0 transition-opacity duration-300 group-hover:opacity-[0.06] group-active:opacity-[0.12] !bg-primary-normal dark:!bg-dark-primary-normal"
            />
            <span
              class="relative z-10"
            >
              Button
            </span>
          </button>
        </div>
      </div>
      <div
        class="flex flex-col gap-4"
      >
        <p
          class="text-14/body text-gray-600"
        >
          outlinedAssertive
        </p>
        <div
          class="flex flex-col gap-4"
        >
          <button
            class="group w-fit inline-flex items-center justify-center whitespace-nowrap rounded-md transition-all duration-300 disabled:pointer-events-none bg-transparent border border-line-normal dark:border-dark-line-normal !text-label-normal dark:!text-dark-label-normal disabled:!text-label-disabled dark:disabled:!text-dark-label-disabled h-10 px-4 text-14/button gap-1.5 relative overflow-hidden"
            type="button"
          >
            <div
              class="absolute inset-0 bg-gray-950 opacity-0 transition-opacity duration-300 group-hover:opacity-[0.06] group-active:opacity-[0.12]"
            />
            <span
              class="relative z-10"
            >
              Button
            </span>
          </button>
          <button
            class="group w-fit inline-flex items-center justify-center whitespace-nowrap rounded-md transition-all duration-300 disabled:pointer-events-none bg-transparent border border-line-normal dark:border-dark-line-normal !text-label-normal dark:!text-dark-label-normal disabled:!text-label-disabled dark:disabled:!text-dark-label-disabled h-10 px-4 text-14/button gap-1.5 relative overflow-hidden"
            disabled=""
            type="button"
          >
            <div
              class="absolute inset-0 bg-gray-950 opacity-0 transition-opacity duration-300 group-hover:opacity-[0.06] group-active:opacity-[0.12]"
            />
            <span
              class="relative z-10"
            >
              Button
            </span>
          </button>
        </div>
      </div>
      <div
        class="flex flex-col gap-4"
      >
        <p
          class="text-14/body text-gray-600"
        >
          textPrimary
        </p>
        <div
          class="flex flex-col gap-4"
        >
          <button
            class="group w-fit inline-flex items-center justify-center whitespace-nowrap rounded-md transition-all duration-300 disabled:pointer-events-none bg-transparent !text-primary-normal dark:!text-dark-primary-normal disabled:!text-label-disabled dark:disabled:!text-dark-label-disabled !px-2 h-10 px-4 text-14/button gap-1.5 relative overflow-hidden"
            type="button"
          >
            <div
              class="absolute inset-0 bg-gray-950 opacity-0 transition-opacity duration-300 group-hover:opacity-[0.06] group-active:opacity-[0.12] !bg-primary-normal dark:!bg-dark-primary-normal"
            />
            <span
              class="relative z-10"
            >
              Button
            </span>
          </button>
          <button
            class="group w-fit inline-flex items-center justify-center whitespace-nowrap rounded-md transition-all duration-300 disabled:pointer-events-none bg-transparent !text-primary-normal dark:!text-dark-primary-normal disabled:!text-label-disabled dark:disabled:!text-dark-label-disabled !px-2 h-10 px-4 text-14/button gap-1.5 relative overflow-hidden"
            disabled=""
            type="button"
          >
            <div
              class="absolute inset-0 bg-gray-950 opacity-0 transition-opacity duration-300 group-hover:opacity-[0.06] group-active:opacity-[0.12] !bg-primary-normal dark:!bg-dark-primary-normal"
            />
            <span
              class="relative z-10"
            >
              Button
            </span>
          </button>
        </div>
      </div>
      <div
        class="flex flex-col gap-4"
      >
        <p
          class="text-14/body text-gray-600"
        >
          textAssertive
        </p>
        <div
          class="flex flex-col gap-4"
        >
          <button
            class="group w-fit inline-flex items-center justify-center whitespace-nowrap rounded-md transition-all duration-300 disabled:pointer-events-none bg-transparent !text-label-assertive dark:!text-dark-label-assertive disabled:!text-label-disabled dark:disabled:!text-dark-label-disabled !px-2 h-10 px-4 text-14/button gap-1.5 relative overflow-hidden"
            type="button"
          >
            <div
              class="absolute inset-0 bg-gray-950 opacity-0 transition-opacity duration-300 group-hover:opacity-[0.06] group-active:opacity-[0.12]"
            />
            <span
              class="relative z-10"
            >
              Button
            </span>
          </button>
          <button
            class="group w-fit inline-flex items-center justify-center whitespace-nowrap rounded-md transition-all duration-300 disabled:pointer-events-none bg-transparent !text-label-assertive dark:!text-dark-label-assertive disabled:!text-label-disabled dark:disabled:!text-dark-label-disabled !px-2 h-10 px-4 text-14/button gap-1.5 relative overflow-hidden"
            disabled=""
            type="button"
          >
            <div
              class="absolute inset-0 bg-gray-950 opacity-0 transition-opacity duration-300 group-hover:opacity-[0.06] group-active:opacity-[0.12]"
            />
            <span
              class="relative z-10"
            >
              Button
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;
